--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,7 +15,15 @@
   }
 
   /* pagination style */
-  .pagebtns {
-    @apply px-4 py-2 rounded-lg font-medium transition-all duration-200 bg-linear-to-r from-blue-500 to-purple-500 hover:from-blue-600 hover:to-purple-600 text-white shadow-md hover:shadow-lg disabled:opacity-50 disabled:cursor-not-allowed dark:from-blue-600 dark:to-purple-600 dark:hover:from-blue-700 dark:hover:to-purple-700;
+  .page-btns {
+    @apply bg-linear-to-r from-blue-500 to-purple-500 hover:from-blue-600 hover:to-purple-600 text-white
+    dark:from-blue-600 dark:to-purple-600 dark:hover:from-blue-700 dark:hover:to-purple-700
+    shadow-md hover:shadow-lg disabled:opacity-50 disabled:cursor-not-allowed px-4 py-2 rounded-lg font-medium transition-all duration-200;
+  }
+
+  /* card style */
+  .base-card {
+    @apply bg-linear-to-br from-white/90 to-blue-50/90 dark:from-gray-800/90 dark:to-blue-900/90 border
+    border-white/20 dark:border-blue-900/20 rounded-lg backdrop-blur-sm transition-all;
   }
 }
